courses/430_programming-languages/assignment-5/tests/error/error01.sml
val prog =
  PROGRAM
    {decls=[],func_decls=[],
     stmts=[ST_EXP {exp=EXP_CALL {args=[EXP_NUM 2],func=EXP_NUM 2}}]}
  : program
;
